--- a/site/temporario/index.html
+++ b/site/temporario/index.html
@@ -112,12 +112,11 @@
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
             <!-- Indicators bullet -->
             <ol class="carousel-indicators">
-                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="0"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2" class="active"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="3"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="4"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="5"></li>
             </ol>
             <!-- End Indicators bullet -->
 
@@ -125,36 +124,7 @@
             <div class="carousel-inner" role="listbox">
 
                 <!-- single slide -->
-                <div class="item active" style="background-image: linear-gradient(rgba(0, 0, 0, 0.7) 100%, rgba(0, 0, 0, 0.7) 100%), url('img/parallax/fundo2.png');">
-                    <div class="carousel-caption">
-                        <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">
-                            Estágio Nacional<span> Rebordosa/Paredes</span>!</h2>
-                        <h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">26/27 de
-                                Março 2022 </span> </h3>
-                        <p data-wow-duration="1000ms" class="wow slideInRight animated">Dia 22 para todas graduações e
-                            dia 23 apenas para graduados</p>
-
-                        <ul class="social-links text-center">
-                            <li>
-                                <a href=""><i class="fa fa-instagram fa-lg"></i></a>
-                            </li>
-                            <li>
-                                <a href=""><i class="fa fa-facebook fa-lg"></i></a>
-                            </li>
-                            <li>
-                                <a href=""><i class="fa fa-google fa-lg"></i></a>
-                            </li>
-                            <li>
-                                <a href=""><i class="fa fa-at fa-lg"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- end single slide -->
-
-
-                <!-- single slide -->
-                <div class="item" style="background-image: linear-gradient(rgba(0, 0, 0, 0.7) 100%, rgba(0, 0, 0, 0.7) 100%), url('img/parallax/saudacao.jpg');">
+                <div class="item " style="background-image: linear-gradient(rgba(0, 0, 0, 0.7) 100%, rgba(0, 0, 0, 0.7) 100%), url('img/parallax/saudacao.jpg');">
                     <div class="carousel-caption">
                         <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">
                             Estágio Nacional<span> Évora</span>!</h2>
@@ -211,7 +181,7 @@
                 <!-- end single slide -->
 
                 <!-- single slide -->
-                <div class="item"
+                <div class="item active"
                     style="background-image: linear-gradient( rgba(0, 0, 0, 0.85) 100%, rgba(0, 0, 0, 0.85) 100%), url(img/parallax/estagio.jpg)">
                     <div class="carousel-caption">
                         <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated"> Gasshuku
@@ -629,10 +599,10 @@
             </figure>
 
             <figure class="mix work-item centro">
-                <img src="img/dojos/seixal.jpeg" alt="" />
+                <img src="img/dojos/brasil.jpg" alt="" />
                 <figcaption class="overlay">
                     <a class="fancyboxInfo" rel="works" title="Write Your Image Caption Here"
-                        href="img/dojos/seixal.jpeg"><i class="fa fa-eye fa-lg"></i></a>
+                        href="img/dojos/brasil.jpg"><i class="fa fa-eye fa-lg"></i></a>
                     <h4>Lisboa</h4>
                     <p>Brasil Gym</p>
                 </figcaption>
@@ -841,7 +811,7 @@
             </figure>
 
             <figure class="mix work-item norte">
-                <img src="img/dojos/rebordosa.jpeg" alt="" />
+                <img src="img/dojos/pacos.jpg" alt="" />
                 <figcaption class="overlay">
                     <a class="fancyboxInfo" rel="works" title="Dojo de Paços de Ferreira - Altis Clube de Paredes"
                         href="#dojopacosferreira"><i class="fa fa-eye fa-lg"></i></a>
@@ -965,7 +935,7 @@
                 <figure class="team-member col-md-4 col-sm-6 col-xs-12 text-center wow fadeInUp animated"
                     data-wow-duration="500ms">
                     <div class="member-thumb">
-                        <img src="img/team/sensei.jpg" alt="Team Member" class="img-responsive" />
+                        <img src="img/team/campos.jpg" alt="Team Member" class="img-responsive" />
                         <figcaption class="overlay">
                             <h5>8º Dan</h5>
                             <p>Começou a treinar Goju Ryu com o Sensei James Rousseau em 1966, treinando com o colega e
@@ -991,7 +961,7 @@
                 <figure class="team-member col-md-4 col-sm-6 col-xs-12 text-center wow fadeInUp animated"
                     data-wow-duration="500ms">
                     <div class="member-thumb">
-                        <img src="img/team/sensei.jpg" alt="Team Member" class="img-responsive" />
+                        <img src="img/team/leonardo.jpg" alt="Team Member" class="img-responsive" />
                         <figcaption class="overlay">
                             <h5>6º Dan</h5>
                             <p>Iniciou a prática da Karaté aos 13 anos ( 1976 )
@@ -1019,7 +989,7 @@
                 <figure class="team-member col-md-4 col-sm-6 col-xs-12 text-center wow fadeInUp animated"
                     data-wow-duration="500ms">
                     <div class="member-thumb">
-                        <img src="img/team/sensei.jpg" alt="Team Member" class="img-responsive" />
+                        <img src="img/team/gualter.jpg" alt="Team Member" class="img-responsive" />
                         <figcaption class="overlay">
                             <h5>6º Dan</h5>
                             <p></p>
@@ -1042,7 +1012,7 @@
                 <figure class="team-member col-md-4 col-sm-6 col-xs-12 text-center wow fadeInUp animated"
                     data-wow-duration="500ms">
                     <div class="member-thumb">
-                        <img src="img/team/sensei.jpg" alt="Team Member" class="img-responsive" />
+                        <img src="img/team/fabio.jpg" alt="Team Member" class="img-responsive" />
                         <figcaption class="overlay">
                             <h5>6º Dan</h5>
                             <p>O sensei Fábio é um exemplo de dedicação aos caminhos das artes orientais, para além da
@@ -1067,7 +1037,7 @@
                 <figure class="team-member col-md-4 col-sm-6 col-xs-12 text-center wow fadeInUp animated"
                     data-wow-duration="500ms">
                     <div class="member-thumb">
-                        <img src="img/team/sensei.jpg" alt="Team Member" class="img-responsive" />
+                        <img src="img/team/alvaro.jpg" alt="Team Member" class="img-responsive" />
                         <figcaption class="overlay">
                             <h5>5º Dan</h5>
                             <p></p>
@@ -1090,7 +1060,7 @@
                 <figure class="team-member col-md-4 col-sm-6 col-xs-12 text-center wow fadeInUp animated"
                     data-wow-duration="500ms">
                     <div class="member-thumb">
-                        <img src="img/team/sensei.jpg" alt="Team Member" class="img-responsive" />
+                        <img src="img/team/francois.jpg" alt="Team Member" class="img-responsive" />
                         <figcaption class="overlay">
                             <h5>5º Dan</h5>
                             <p></p>
