Adding a page for Gasshuku 2022

--- a/index.html
+++ b/index.html
@@ -213,8 +213,7 @@
                         </br>
                         <p>
                             <a
-                                href="https://www.facebook.com/539889529507256/photos/a.539889606173915/2543350935827762/">Informação
-                                Adicional / See Additional Info</a>
+                                href="./gasshuku2022.html">Informações / More info</a>
                         </p>
                     </div>
                 </div>
@@ -230,7 +229,7 @@
                         <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated"> <span>
                                 International </span></h2>
                         <h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span
-                                class="color">/Paredes</span> Portugal</h3>
+                                class="color">/Paços de Ferreira</span> Portugal</h3>
                         <p data-wow-duration="1000ms" class="wow slideInRight animated">24 Abril</p>
 
                         <ul class="social-links text-center">
@@ -761,7 +760,7 @@
                                             <i class="fa fa-instagram fa-lg"></i></a>
                                     </li>
                                     <li>
-                                        <a href="mailto:karatedojorebordosa.jip@gmail.com">karatedojorebordosa.jip@gmail.com><i
+                                        <a href="mailto:karatedojorebordosa.jip@gmail.com"><i
                                                 class="fa fa-at fa-lg"></i></a>
                                     </li>
                                 </ul>
@@ -850,7 +849,7 @@
                                             <i class="fa fa-instagram fa-lg"></i></a>
                                     </li>
                                     <li>
-                                        <a href="mailto:karatedojorebordosa.jip@gmail.com">karatedojorebordosa.jip@gmail.com><i
+                                        <a href="mailto:karatedojorebordosa.jip@gmail.com"><i
                                                 class="fa fa-at fa-lg"></i></a>
                                     </li>
                                 </ul>
@@ -924,7 +923,7 @@
             </figure>
 
             <figure class="mix work-item norte">
-                <img src="img/dojos/rebordosa.jpeg" alt="" />
+                <img src="img/dojos/paredes.jpeg" alt="" />
                 <figcaption class="overlay">
                     <a class="fancyboxInfo" rel="works" title="Dojo de Rebordosa - Altis Clube de Paredes"
                         href="#dojoparedes"><i class="fa fa-eye fa-lg"></i></a>
@@ -953,10 +952,7 @@
                                         <a target="_blank" href="https://www.instagram.com/karatedojorebordosa/">
                                             <i class="fa fa-instagram fa-lg"></i></a>
                                     </li>
-                                    <li>
-                                        <a href="mailto:karatedojorebordosa.jip@gmail.com">karatedojorebordosa.jip@gmail.com><i
-                                                class="fa fa-at fa-lg"></i></a>
-                                    </li>
+                                    
                                 </ul>
                             </div>
                         </div>
@@ -1034,7 +1030,7 @@
                                     class="fa fa-instagram fa-lg"></i></a>
                         </li>
                         <li>
-                            <a href="mailto:karatedojorebordosa.jip@gmail.com"><i class="fa fa-at fa-lg"></i></a>
+                            <a href="mailto:senseimario.goju@gmail.com"><i class="fa fa-at fa-lg"></i></a>
                         </li>
                     </ul>
                 </figcaption>
@@ -1052,7 +1048,7 @@
                                             <i class="fa fa-instagram fa-lg"></i></a>
                                     </li>
                                     <li>
-                                        <a href="mailto:karatedojorebordosa.jip@gmail.com">karatedojorebordosa.jip@gmail.com><i
+                                        <a href="mailto:senseimario.goju@gmail.com"><i
                                                 class="fa fa-at fa-lg"></i></a>
                                     </li>
                                 </ul>
@@ -1418,7 +1414,7 @@
                         <li>
                             <span>24 Abril 2022</span>
                             <div class="content">
-                                <h3>Rebordosa - Taça JIP</h3>
+                                <h3>Paços de Ferreira - Taça JIP</h3>
                                 <p>
                                     Taça JIP (Jundokan Internacional de Portugal)
                                 </p>
