--- a/gasshuku2022.html
+++ b/gasshuku2022.html
@@ -93,7 +93,7 @@
                 <ul id="nav" class="nav navbar-nav">
                     <li class="current"><a href="./index.html">Home</a></li>
                     <li><a href="#program">Program</a></li>
-                    <li><a href="#info">Taxes</a></li>
+                    <li><a href="#info">Rates</a></li>
                     <li><a href="#contacts">Contacts</a></li>
                     <li><a href="#registration">Registration</a></li>
                 </ul>
