Changing the posters

--- a/gasshuku2022.html
+++ b/gasshuku2022.html
@@ -23,7 +23,7 @@
     <meta property="og:title" content="Jundookan International Portugal - Associação Okinawa Goju Ryu Karate Do" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.jundokan.pt/index.html" />
-    <meta property="og:image" content="https://www.jundokan.pt/img/parallax/fundo2.png" />
+    <meta property="og:image" content="https://www.jundokan.pt/posters/Gasshuko2022..jpeg" />
     <meta property="og:description"
         content="Jundookan International Portugal - Associação Okinawa Goju Ryu Karate Do" />
 
@@ -131,7 +131,7 @@
                         <h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span
                                 class="color">/Paredes</span> Portugal</h3>
                         <p data-wow-duration="1000ms" class="wow slideInRight animated">7-10 July/Julho </p>
-                        <h4 data-wow-duration="1000ms" class="wow slideInLeft animated"><a target="_blank" href="./cartazes/gasshuko2022.pdf"> <div class="button"> Cartaz / Poster </div></a> </h4> 
+                        <h4 data-wow-duration="1000ms" class="wow slideInLeft animated"><a target="_blank" href="./posters/Gasshuko2022.pdf"> <div class="button"> Cartaz / Poster </div></a> </h4> 
                         </br>
                     </div>
                 </div>
@@ -488,7 +488,7 @@
                     <div class="footer-single">
                         <h6>Conteudos</h6>
                         <ul>
-                            <li><a target="_blank" href="./cartazes/gasshuko2022.pdf">Gasshuko
+                            <li><a target="_blank" href="./posters/Gasshuko2022.pdf">Gasshuko
                                     2022</a>
                             </li>
                         </ul>
