Adding animations on gasshuku page

--- a/gasshuku2022.html
+++ b/gasshuku2022.html
@@ -133,7 +133,10 @@
                         <p data-wow-duration="1000ms" class="wow slideInRight animated">7-10 July/Julho </p>
                         <h4 data-wow-duration="1000ms" class="wow slideInLeft animated"><a target="_blank" href="./posters/Gasshuko2022.pdf"> <div class="button"> Cartaz / Poster </div></a> </h4> 
                         </br>
+                         <a href="#program"><img class="arrowdown" src="./img/arrowdown.svg" alt="" /></a> 
                     </div>
+                    
+                
                 </div>
                 <!-- end single slide -->
 
