--- a/gasshuku2022.html
+++ b/gasshuku2022.html
@@ -23,7 +23,7 @@
     <meta property="og:title" content="Jundookan International Portugal - Associação Okinawa Goju Ryu Karate Do" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.jundokan.pt/index.html" />
-    <meta property="og:image" content="https://www.jundokan.pt/posters/Gasshuko2022..jpeg" />
+    <meta property="og:image" content="https://www.jundokan.pt/posters/Gasshuko2022.jpeg" />
     <meta property="og:description"
         content="Jundookan International Portugal - Associação Okinawa Goju Ryu Karate Do" />
 
