update some link sto include mailto

--- a/gasshuku2022.html
+++ b/gasshuku2022.html
@@ -285,7 +285,7 @@
                     <h3>Sensei José Campos</h3>
                     <ul class="social-links text-center">
                         <li>
-                            <a href="jose.campos@netcabo.pt"> <i class="fa fa-at fa-lg"></i> </a>
+                            <a href="mailto:jose.campos@netcabo.pt"> <i class="fa fa-at fa-lg"></i> </a>
                         </li>
                     </ul>
                 </div>
@@ -293,7 +293,7 @@
                     <h3>Sensei Leonardo Pereira</h3>
                     <ul class="social-links text-center">
                         <li>
-                            <a href="Leonardo.jip@sapo.pt"> <i class="fa fa-at fa-lg"></i></a>
+                            <a href="mailto:Leonardo.jip@sapo.pt"> <i class="fa fa-at fa-lg"></i></a>
                         </li>
                         <li class="text-center">
                             <a href="https://www.facebook.com/https://www.facebook.com/leonardo.pereira.39904181"> <i
@@ -306,7 +306,7 @@
                     <ul class="social-links text-center">
                         <li class="text-center">
 
-                            <a href="gualter.jip@gmail.com"> <i class="fa fa-at fa-lg"></i></a>
+                            <a href="mailto:gualter.jip@gmail.com"> <i class="fa fa-at fa-lg"></i></a>
                         </li>
                         <li class="text-center">
                             <a href="https://www.facebook.com/gualter.morgado"> <i class="fa fa-facebook fa-lg"></i></a>
