Updates website removing past event

--- a/index.html
+++ b/index.html
@@ -112,75 +112,13 @@
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
             <!-- Indicators bullet -->
             <ol class="carousel-indicators">
-                <li data-target="#carousel-example-generic" data-slide-to="0"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="2" class="active"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="4"></li>
             </ol>
             <!-- End Indicators bullet -->
 
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
-
-                <!-- single slide -->
-                <div class="item "
-                    style="background-image: linear-gradient(rgba(0, 0, 0, 0.7) 100%, rgba(0, 0, 0, 0.7) 100%), url('img/parallax/saudacao.jpg');">
-                    <div class="carousel-caption">
-                        <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">
-                            Estágio Nacional<span> Évora</span>!</h2>
-                        <h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">/10 de Abril
-                                2022 </span> das 10 às 13 </h3>
-                        <p data-wow-duration="1000ms" class="wow slideInRight animated">Pavilhão Escola dos Salesianos
-                        </p>
-
-                        <ul class="social-links text-center">
-                            <li>
-                                <a href=""><i class="fa fa-instagram fa-lg"></i></a>
-                            </li>
-                            <li>
-                                <a href=""><i class="fa fa-facebook fa-lg"></i></a>
-                            </li>
-                            <li>
-                                <a href=""><i class="fa fa-google fa-lg"></i></a>
-                            </li>
-                            <li>
-                                <a href=""><i class="fa fa-at fa-lg"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- end single slide -->
-
-                <!-- single slide -->
-                <div class="item"
-                    style="background-image: linear-gradient( rgba(0, 0, 0, 0.9) 100%, rgba(0, 0, 0, 0.9) 100%), url(img/parallax/kata.jpg)">
-                    <div class="carousel-caption">
-                        <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated"> Gasshuku
-                        </h2>
-                        <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated"> <span>
-                                Retiro de Cintos Negros</span></h2>
-                        <h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span
-                                class="color">/Lagos</span> Portugal</h3>
-                        <p data-wow-duration="1000ms" class="wow slideInRight animated">20-22 de Maio</p>
-
-                        <ul class="social-links text-center">
-                            <li>
-                                <a target="_blank"
-                                    href="https://api.whatsapp.com/send?phone=351917503397&app=webpage"><i
-                                        class="fa fa-whatsapp fa-lg"></i></a>
-                            </li>
-                            <li>
-                                <a target="_blank"
-                                    href="https://www.facebook.com/539889529507256/photos/a.539889606173915/2525237320972457/"><i
-                                        class="fa fa-facebook fa-lg"></i></a>
-                            </li>
-                            <li>
-                                <a href="mailto://direccaojip@gmail.com"><i class="fa fa-at fa-lg"></i></a>
-                        </ul>
-                    </div>
-                </div>
-                <!-- end single slide -->
 
                 <!-- single slide -->
                 <div class="item active"
@@ -215,38 +153,6 @@
                             <a
                                 href="./gasshuku2022.html">Informações / More info</a>
                         </p>
-                    </div>
-                </div>
-                <!-- end single slide -->
-
-                <!-- single slide -->
-                <div class="item"
-                    style="background-image: linear-gradient( rgba(0, 0, 0, 0.9) 100%, rgba(0, 0, 0, 0.9) 100%), url(img/parallax/tacajudokan.jpg)">
-                    <div class="carousel-caption">
-                        <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated"> Taça
-                            Nacional José Campos - Jundokan
-                        </h2>
-                        <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated"> <span>
-                                International </span></h2>
-                        <h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span
-                                class="color">/Paços de Ferreira</span> Portugal</h3>
-                        <p data-wow-duration="1000ms" class="wow slideInRight animated">24 Abril</p>
-
-                        <ul class="social-links text-center">
-                            <li>
-                                <a target="_blank"
-                                    href="https://api.whatsapp.com/send?phone=351917503397&app=webpage"><i
-                                        class="fa fa-whatsapp fa-lg"></i></a>
-                            </li>
-                            <li>
-                                <a target="_blank"
-                                    href="https://www.facebook.com/539889529507256/photos/a.539889606173915/2525237320972457/"><i
-                                        class="fa fa-facebook fa-lg"></i></a>
-                            </li>
-                            <li>
-                                <a href="mailto://direccaojip@gmail.com"><i class="fa fa-at fa-lg"></i></a>
-                            </li>
-                        </ul>
                     </div>
                 </div>
                 <!-- end single slide -->
@@ -1430,12 +1336,11 @@
                             </div>
                         </li>
                         <li>
-                            <span>11-12 Junho 2022</span>
+                            <span>12 Junho 2022</span>
                             <div class="content">
                                 <h3>Seixal - Estágio Nacional</h3>
                                 <p>
-                                    Estágio nacional e de graduados no Seixal. Dia 11 estágio nacional, todas as
-                                    graduações. Dia 12 estágio de graduados.
+                                    Estágio nacional e de graduados no Seixal.
                                 </p>
                             </div>
                         </li>
