Fixing typo "connosco"

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     style="background-image: linear-gradient( rgba(0, 0, 0, 0.6) 100%, rgba(0, 0, 0, 0.6) 100%), url(img/parallax/fundo2.png)">
                     <div class="carousel-caption">
                         <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">
-                            Treina<span> conosco</span>!</h2>
+                            Treina<span> connosco</span>!</h2>
                         <h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span
                                 class="color">/Okinawa</span> Goju Ryu</h3>
                         <p data-wow-duration="1000ms" class="wow slideInRight animated">Karate Do</p>
@@ -1452,7 +1452,7 @@
                 <div class="col-lg-11 col-md-11 col-sm-11 col-xs-12 wow fadeInDown animated" data-wow-duration="500ms"
                     data-wow-delay="300ms">
                     <div class="contact-form">
-                        <h3>Fala conosco se tiveres alguma dúvida? </h3>
+                        <h3>Fala connosco se tiveres alguma dúvida? </h3>
                         <form action="#" id="contact-form">
                             <div class="input-group name-email">
                                 <div class="input-field">
