--- a/index.html
+++ b/index.html
@@ -1532,7 +1532,7 @@
                         <h6>Links Uteis</h6>
                         <ul>
                             <li><a target="_blank" href="https://www.fnkp.pt/">Federação Nacional de Karaté</a></li>
-                            <li><a target="_blank" href="https://www.jundokan-international.org//">Jundokan
+                            <li><a target="_blank" href="https://www.jundokan-international.org/">Jundokan
                                     Internacional</a></li>
                         </ul>
                     </div>
