--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             <ol class="carousel-indicators">
                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
             </ol>
             <!-- End Indicators bullet -->
 
@@ -129,9 +130,9 @@
                         <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated"> <span>
                                 International </span></h2>
                         <h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span
-                                class="color">/Paredes</span> Portugal</h3>
+                                class="color">/Rebordosa/Paredes/</span> Portugal</h3>
 
-                        <p data-wow-duration="1000ms" class="wow slideInRight animated">7-10 July/Julho </p>
+                        <p data-wow-duration="1000ms" class="wow slideInRight animated">1-2 July/Julho 2023</p>
 
                         <ul class="social-links text-center">
                             <li>
@@ -149,10 +150,11 @@
                             </li>
                         </ul>
                         </br>
+                        <!--
                         <p>
-                            <a
-                                href="./gasshuku2022.html">Informações / More info</a>
+                            <a href="./gasshuku2022.html">Informações / More info</a>
                         </p>
+                        -->
                     </div>
                 </div>
                 <!-- end single slide -->
@@ -179,6 +181,27 @@
                             </li>
                             <li>
                                 <a href=""><i class="fa fa-at fa-lg"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- end single slide -->
+
+                <!-- single slide -->
+                <div class="item"
+                    style="background-image: linear-gradient( rgba(0, 0, 0, 0.6) 100%, rgba(0, 0, 0, 0.6) 100%), url(img/parallax/fundo2.png)">
+                    <div class="carousel-caption">
+                        <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">
+                            <span> Novo</span> local the treino em <span>Lisboa</span>!</h2>
+                        <h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span
+                                class="color">/Okinawa</span> Goju Ryu</h3>
+                        <p data-wow-duration="1000ms" class="wow slideInRight animated">Associação Cultural Maloca</p>
+                        <p data-wow-duration="1000ms" class="wow slideInRight animated">Rua da Penha de França, 67 A, junto ao Mercado de Sapadores</p>
+                        <p data-wow-duration="1000ms" class="wow slideInRight animated">Sexta-feiras, entre as 19:00h e as 20:30h</p>
+
+                        <ul class="social-links text-center">
+                            <li>
+                                <a href="mailto://alanamar@sapo.pt"><i class="fa fa-at fa-lg"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -724,6 +747,83 @@
                 </div>
             </figure>
 
+
+            <figure class="mix work-item centro">
+                <img src="img/dojos/brasil.jpg" alt="" />
+                <figcaption class="overlay">
+                    <a class="fancyboxInfo" rel="works" title="Dojo de Lisboa - Associação Cultural Maloca"
+                        href="#dojolisboamaloca"><i class="fa fa-eye fa-lg"></i></a>
+                    <h4>Dojo de Lisboa</h4>
+                    <p>Associação Cultural Maloca</p>
+                    <ul class="social-links text-center">
+                        <li>
+                            <a href="mailto:alanamar@sapo.pt"><i class="fa fa-at fa-lg"></i></a>
+                        </li>
+                    </ul>
+                </figcaption>
+                <div id="dojolisboamaloca" class="dojo-details" style="display:none">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col col-md-6 col-sm-6 col-xs-12 ">
+                                <h2><span class="color">Dojo de Lisboa</span></h2>
+                                <h3><span class="">Associação Cultural Maloca</span></h3>
+                            </div>
+                            <div class="col  col-md-6 col-sm-6 col-xs-12 ">
+                                <ul class="social-links text-center">
+                                    <li>
+                                        <a href="mailto:alanamar@sapo.pt"><i class="fa fa-at fa-lg"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col col-md-12 col-sm-12 col-xs-12 ">
+                                <br />
+                                <p>O dojo da Associação Cultural Maloca cobre a area da grande Lisboa. A Secção de
+                                    Karaté tem vários Dojos, promove a
+                                    prática de karaté, kobudo e defesa pessoal, para crianças e adultos.</p>
+                                <br />
+                                <p><b>Estilo:</b> Okinawa Goju-Ryu Karaté-Do. </p>
+                                <br />
+                                <p><b>Parcerias e Filiações: </b>Associação Cultural Maloca;
+                                    Jundokan Internacional Portugal.</p>
+                                <br />
+                                <p><b>Instrutores:</b>
+                                <ul>
+                                    <li>
+                                        <b>Responsável Técnico:</b> Alvaro Santos 5º Dan em Goju-ryu
+                                    </li>
+                                </ul>
+                                </p>
+                                <br />
+                                <p> <b>Inscrições:</b> Abertas para novos Alunos (Crianças e Adultos)</p>
+                                <br />
+                                <p> <b>Horários disponíveis:</b></br>
+                                    Todas as idades: 19h00 - 20h30</br>
+                                    Haverá algumas aulas ao sábado, mediante disponibilidade do espaço.</br>
+                                <br />
+                                <p> <b>Aulas/instalações:</b> Rua da Penha de França, 67 A, junto ao Mercado de
+                                    Sapadores
+                                </p><br />
+                                <p> <b>Contactos</b>
+                                <p> Email: <a href="mailto:alanamar@sapo.pt">alanamar@sapo.pt</a>
+                                    <br />
+                                    <iframe
+                                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d194.54809974930154!2d-9.12935263197632!3d38.72309852038635!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd19338e7353af4f%3A0xd1a3724902f95468!2sRua%20da%20Penha%20de%20Fran%C3%A7a%2067A%2C%201170-302%20Lisboa!5e0!3m2!1sen!2spt!4v1671798439936!5m2!1sen!2spt"
+                                        width="100%" height="200" style="border:0;" allowfullscreen=""
+                                        loading="lazy"></iframe>
+                                <ul class="social-links text-center">
+                                    <li>
+
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </figure>
+
+
             <figure class="mix work-item norte">
                 <img src="img/dojos/rebordosa.jpeg" alt="" />
                 <figcaption class="overlay">
@@ -858,7 +958,7 @@
                                         <a target="_blank" href="https://www.instagram.com/karatedojorebordosa/">
                                             <i class="fa fa-instagram fa-lg"></i></a>
                                     </li>
-                                    
+
                                 </ul>
                             </div>
                         </div>
@@ -954,8 +1054,7 @@
                                             <i class="fa fa-instagram fa-lg"></i></a>
                                     </li>
                                     <li>
-                                        <a href="mailto:senseimario.goju@gmail.com"><i
-                                                class="fa fa-at fa-lg"></i></a>
+                                        <a href="mailto:senseimario.goju@gmail.com"><i class="fa fa-at fa-lg"></i></a>
                                     </li>
                                 </ul>
                             </div>
@@ -1208,7 +1307,7 @@
             <div class="container">
                 <div class="row number-counters">
                     <div class="sec-title text-center mb50 wow rubberBand animated" data-wow-duration="1000ms">
-                        <h2>Alguns Factos 2022</h2>
+                        <h2>Alguns Factos Esperados para 2023</h2>
                         <div class="devider"><i class="fa fa-heart-o fa-lg"></i></div>
                     </div>
 
@@ -1271,63 +1370,77 @@
 
                 <div class="sec-sub-title text-center wow fadeInRight animated" data-wow-duration="500ms">
                     <p>
-                        Esta é o nosso calendário para 2022!
+                        Esta é o nosso calendário de atividades para 2022/2023!
                     </p>
                 </div>
 
                 <div class="timeline">
                     <ul>
                         <li>
-                            <span>6-7 Novembro 2021</span>
-                            <div class="content">
-                                <h3>Rebordosa - Estágio Nacional</h3>
-                                <p>
-                                    Estágio nacional e de graduados na Rebordosa. Dia 6 estágio nacional, todas as
-                                    graduações. Dia 7 estágio de graduados.
-                                </p>
-                            </div>
-                        </li>
-                        <li>
-                            <span>22-23 Janeiro 2022</span>
+                            <span>21 de Janeiro de 2023</span>
                             <div class="content">
                                 <h3>Seixal - Estágio Nacional</h3>
                                 <p>
-                                    Estágio nacional e de graduados no Seixal. Dia 22 estágio nacional, todas as
-                                    graduações. Dia 23 estágio de graduados.
+                                    Estágio nacional no Seixal. 
                                 </p>
                             </div>
                         </li>
                         <li>
-                            <span>26-27 Março 2022</span>
+                            <span>22 de Janeiro de 2023</span>
                             <div class="content">
-                                <h3>Rebordosa/Paredes - Estágio Nacional</h3>
+                                <h3>Seixal - Estágio Graduados</h3>
                                 <p>
-                                    Estágio nacional e de graduados no Rebordosa/Paredes. Dia 26 estágio nacional, todas
-                                    as
-                                    graduações. Dia 27 estágio de graduados.
+                                    Estágio Graduados no Seixal. 
                                 </p>
                             </div>
                         </li>
                         <li>
-                            <span>10 Abril 2022</span>
+                            <span>5 de Março 2023</span>
                             <div class="content">
-                                <h3>Évora - Estágio Nacional</h3>
+                                <h3>Évora - Estágio Nacional e Graduados</h3>
                                 <p>
-                                    Estágio nacional e de graduados em Évora. Das 10 às 13h.
+                                    Estágio Nacional e Graduados em Évora.
                                 </p>
                             </div>
                         </li>
                         <li>
-                            <span>24 Abril 2022</span>
+                            <span>25 de Março de 2023</span>
                             <div class="content">
-                                <h3>Paços de Ferreira - Taça JIP</h3>
+                                <h3>Rebordosa - Estágio Nacional</h3>
                                 <p>
-                                    Taça JIP (Jundokan Internacional de Portugal)
+                                    Estágio Nacional na Rebordosa. 
                                 </p>
                             </div>
                         </li>
                         <li>
-                            <span>20-22 Maio 2022</span>
+                            <span>26 de Março de 2023</span>
+                            <div class="content">
+                                <h3>Rebordosa - Estágio Graduados</h3>
+                                <p>
+                                    Estágio Graduados na Rebordosa. 
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <span>10 Abril 2023</span>
+                            <div class="content">
+                                <h3>Évora - Estágio Nacional e Graduados</h3>
+                                <p>
+                                    Estágio Nacional e Graduados em Évora.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <span>16 de Abril de 2023</span>
+                            <div class="content">
+                                <h3>Seixal - Taça JIP (Jundokan Internacional de Portugal) </h3>
+                                <p>
+                                    Taça JIP (Jundokan Internacional de Portugal) no Seixal.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <span>26-28 Maio 2023</span>
                             <div class="content">
                                 <h3>Lagos - Retiro </h3>
                                 <p>
@@ -1336,18 +1449,27 @@
                             </div>
                         </li>
                         <li>
-                            <span>12 Junho 2022</span>
+                            <span>17 Junho 2023</span>
                             <div class="content">
                                 <h3>Seixal - Estágio Nacional</h3>
                                 <p>
-                                    Estágio nacional e de graduados no Seixal.
+                                    Estágio Nacional no Seixal.
                                 </p>
                             </div>
                         </li>
                         <li>
-                            <span>7-10 Julho 2022</span>
+                            <span>18 Junho 2023</span>
                             <div class="content">
-                                <h3>Paredes - Gasshuku Internacional</h3>
+                                <h3>Seixal - Estágio Graduados</h3>
+                                <p>
+                                    Estágio Graduados no Seixal.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <span>1-2 Julho 2023</span>
+                            <div class="content">
+                                <h3>Rebordosa - Gasshuku Internacional</h3>
                                 <p>
                                     Gasshuku Internacional, aberto a todos os interessados e com convidados
                                     internacionais.
@@ -1518,8 +1640,7 @@
                     <div class="footer-single">
                         <h6>Conteudos</h6>
                         <ul>
-                            <li><a target="_blank" 
-                                    href="./cartazes/gasshuko2022.pdf">Gasshuko
+                            <li><a target="_blank" href="./cartazes/gasshuko2022.pdf">Gasshuko
                                     2022</a>
                             </li>
                         </ul>
