Adding estagio nacional Evora 2023

--- a/index.html
+++ b/index.html
@@ -115,14 +115,53 @@
                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="3"></li>
             </ol>
             <!-- End Indicators bullet -->
 
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
-
+                
                 <!-- single slide -->
                 <div class="item active"
+                    style="background-image: linear-gradient( rgba(0, 0, 0, 0.85) 100%, rgba(0, 0, 0, 0.85) 100%), url(img/parallax/estagiokarateevora.jpg)">
+                    <div class="carousel-caption">
+                        <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated"> Estágio
+                        </h2>
+                        <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated"> <span>
+                                Nacional </span></h2>
+                        <h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span
+                                class="color">Escola Salesianos</span> Évora / Portugal</h3>
+
+                        <p data-wow-duration="1000ms" class="wow slideInRight animated">5 de Março de 2023</p>
+
+                        <ul class="social-links text-center">
+                            <li>
+                                <a target="_blank"
+                                    href="https://api.whatsapp.com/send?phone=351917503397&app=webpage"><i
+                                        class="fa fa-whatsapp fa-lg"></i></a>
+                            </li>
+                            <li>
+                                <a target="_blank"
+                                    href="https://www.facebook.com/539889529507256/photos/a.539889606173915/2525237320972457/"><i
+                                        class="fa fa-facebook fa-lg"></i></a>
+                            </li>
+                            <li>
+                                <a href="mailto://direccaojip@gmail.com"><i class="fa fa-at fa-lg"></i></a>
+                            </li>
+                        </ul>
+                        </br>
+                        <!--
+                        <p>
+                            <a href="./gasshuku2022.html">Informações / More info</a>
+                        </p>
+                        -->
+                    </div>
+                </div>
+                <!-- end single slide -->
+
+                <!-- single slide -->
+                <div class="item"
                     style="background-image: linear-gradient( rgba(0, 0, 0, 0.85) 100%, rgba(0, 0, 0, 0.85) 100%), url(img/parallax/estagio.jpg)">
                     <div class="carousel-caption">
                         <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated"> Gasshuku
@@ -192,12 +231,15 @@
                     style="background-image: linear-gradient( rgba(0, 0, 0, 0.6) 100%, rgba(0, 0, 0, 0.6) 100%), url(img/parallax/fundo2.png)">
                     <div class="carousel-caption">
                         <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">
-                            <span> Novo</span> local the treino em <span>Lisboa</span>!</h2>
+                            <span> Novo</span> local the treino em <span>Lisboa</span>!
+                        </h2>
                         <h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span
                                 class="color">/Okinawa</span> Goju Ryu</h3>
                         <p data-wow-duration="1000ms" class="wow slideInRight animated">Associação Cultural Maloca</p>
-                        <p data-wow-duration="1000ms" class="wow slideInRight animated">Rua da Penha de França, 67 A, junto ao Mercado de Sapadores</p>
-                        <p data-wow-duration="1000ms" class="wow slideInRight animated">Sexta-feiras, entre as 19:00h e as 20:30h</p>
+                        <p data-wow-duration="1000ms" class="wow slideInRight animated">Rua da Penha de França, 67 A,
+                            junto ao Mercado de Sapadores</p>
+                        <p data-wow-duration="1000ms" class="wow slideInRight animated">Sexta-feiras, entre as 19:00h e
+                            as 20:30h</p>
 
                         <ul class="social-links text-center">
                             <li>
@@ -801,7 +843,7 @@
                                 <p> <b>Horários disponíveis:</b></br>
                                     Todas as idades: 19h00 - 20h30</br>
                                     Haverá algumas aulas ao sábado, mediante disponibilidade do espaço.</br>
-                                <br />
+                                    <br />
                                 <p> <b>Aulas/instalações:</b> Rua da Penha de França, 67 A, junto ao Mercado de
                                     Sapadores
                                 </p><br />
@@ -1381,7 +1423,7 @@
                             <div class="content">
                                 <h3>Seixal - Estágio Nacional</h3>
                                 <p>
-                                    Estágio nacional no Seixal. 
+                                    Estágio nacional no Seixal.
                                 </p>
                             </div>
                         </li>
@@ -1390,7 +1432,7 @@
                             <div class="content">
                                 <h3>Seixal - Estágio Graduados</h3>
                                 <p>
-                                    Estágio Graduados no Seixal. 
+                                    Estágio Graduados no Seixal.
                                 </p>
                             </div>
                         </li>
@@ -1408,7 +1450,7 @@
                             <div class="content">
                                 <h3>Rebordosa - Estágio Nacional</h3>
                                 <p>
-                                    Estágio Nacional na Rebordosa. 
+                                    Estágio Nacional na Rebordosa.
                                 </p>
                             </div>
                         </li>
@@ -1417,7 +1459,7 @@
                             <div class="content">
                                 <h3>Rebordosa - Estágio Graduados</h3>
                                 <p>
-                                    Estágio Graduados na Rebordosa. 
+                                    Estágio Graduados na Rebordosa.
                                 </p>
                             </div>
                         </li>
