Remove old events

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
             <div class="carousel-inner" role="listbox">
                 
                 <!-- single slide -->
+                <!--
                 <div class="item active"
                     style="background-image: linear-gradient( rgba(0, 0, 0, 0.85) 100%, rgba(0, 0, 0, 0.85) 100%), url(img/parallax/estagiokarateevora.jpg)">
                     <div class="carousel-caption">
@@ -151,16 +152,16 @@
                             </li>
                         </ul>
                         </br>
-                        <!--
-                        <p>
-                            <a href="./gasshuku2022.html">Informações / More info</a>
-                        </p>
-                        -->
+
+
+
                     </div>
                 </div>
+                -->
                 <!-- end single slide -->
 
                 <!-- single slide -->
+                <!--
                 <div class="item"
                     style="background-image: linear-gradient( rgba(0, 0, 0, 0.85) 100%, rgba(0, 0, 0, 0.85) 100%), url(img/parallax/estagio.jpg)">
                     <div class="carousel-caption">
@@ -189,17 +190,14 @@
                             </li>
                         </ul>
                         </br>
-                        <!--
-                        <p>
-                            <a href="./gasshuku2022.html">Informações / More info</a>
-                        </p>
-                        -->
+
                     </div>
                 </div>
+                -->
                 <!-- end single slide -->
 
                 <!-- single slide -->
-                <div class="item"
+                <div class="item active"
                     style="background-image: linear-gradient( rgba(0, 0, 0, 0.6) 100%, rgba(0, 0, 0, 0.6) 100%), url(img/parallax/fundo2.png)">
                     <div class="carousel-caption">
                         <h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">
