Update to include logo on top

--- a/index.html
+++ b/index.html
@@ -78,10 +78,8 @@
                 <!-- logo -->
                 <a class="navbar-brand" href="#body">
                     <h1 id="logo">
-                        <div>Jundokan Internacional Portugal</div>
-                        <!--
-                        <img src="img/jundokan_logo_transparent.png" alt="JIP" style="width: 20px;" />
-                        -->
+                        <img src="img/jundokan_logo_transparent.png" alt="JIP" style="height: 50px; margin-right: 20px;" />
+                        <span>Jundokan Internacional Portugal</span>
                     </h1>
                 </a>
                 <!-- /logo -->
@@ -114,8 +112,10 @@
             <ol class="carousel-indicators">
                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <!--
                 <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                -->
             </ol>
             <!-- End Indicators bullet -->
 
